# slp

./: .gitignore  README.md  Sign Language Production final.ipynb  Sign Language Production-wences.ipynb  Sign Language Production.ipynb  Sign Language Productionwip.ipynb  pyproject.toml  requirements.txt
ProgressiveTransformersSLP/: batch.py  builders.py  constants.py  data.py  decoders.py  dtw.py  embeddings.py  encoders.py  helpers.py  initialization.py  loss.py  model.py  plot_videos.py  prediction.py  requirements.txt  search.py  training.py  transformer_layers.py  vocabulary.py
ProgressiveTransformersSLP/Configs/: Base.yaml
augmentations/: backtranslation.py
config/: config.yaml
logs/baseline/: Base.yaml  training-logs.txt
logs/bert/: logs.txt
logs/bert_backtranslation/: config.yaml
notebooks/: 01 - Exploration.ipynb
skelesign/: config.py  constants.py  utils.py
src/config/: config.yaml
src/networks/: decoders.py  embeddings.py  encoders.py  helpers.py  layers.py  model.py
src/skelesign/: batch.py  config.py  data.py  dtw.py  loss.py  plotting.py  vocabulary.py
training_logs/augmented/: validations.txt
training_logs/augmented/tensorboard/: events.out.tfevents.1646857998.d38838ddd0bb.503.0
training_logs/baseline/45_epochs/: config.yaml  validations.txt
training_logs/baseline/45_epochs/tensorboard/: events.out.tfevents.1646918575.fd9fb79846d7.3022.0  events.out.tfevents.1646922490.fd9fb79846d7.3022.1
training_logs/bert/06_epochs/: config.yaml  validations.txt
training_logs/bert/52_epochs/: config.yaml  validations.txt
(+2 files in other folders)
