[tool.poetry]
name = "skelesign"
version = "0.1.0"
description = ""
authors = ["wenceslao villegas <wenceslao.villegas@tum.de>"]

[tool.poetry.dependencies]
python = "^3.9"
torch="1.10.2"
torchtext="0.4.0"
tensorboard="2.7.0"
jupyter="1.0.0"
opencv-python="4.5.5.62"
omegaconf = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
